<resources>
    <string name="app_name">jw reports</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="registration_successfully">register successfully</string>
    <string name="registration_not_successfully">register NOT successfully</string>
    <string name="size_publications">publications: </string>
    <string name="size_videos">videos: </string>
    <string name="size_hours">hours: </string>
    <string name="size_repeated_visits">repeated visits: </string>
    <string name="size_studying_bible">studying bible: </string>
    <string name="send_report">send report</string>
    <string name="warder_id">group id</string>
    <string name="your_name">your name</string>
    <string name="log_in">log in</string>
    <string name="registration">registration</string>
    <string name="show_report">show group report</string>
    <string name="register_for_warder_group">register for warder group</string>
    <string name="register_for_preacher">register for preacher</string>
    <string name="about_application_text_item">about application</string>

    <array name="activities_for_registration">
        <item>
            register for warder group
        </item>
        <item>
            register for preacher
        </item>
    </array>

    <array name="months">
        <item>
            january
        </item>
        <item>
            february
        </item>
        <item>
            march
        </item>
        <item>
            april
        </item>
        <item>
            may
        </item>
        <item>
            june
        </item>
        <item>
            july
        </item>
        <item>
            august
        </item>
        <item>
            september
        </item>
        <item>
            october
        </item>
        <item>
            november
        </item>
        <item>
            december
        </item>
    </array>

    <string name="about_application">
    How to use the application: \ n The group warden creates a group (
    indicating in the corresponding registration window your email and password) and sends
    to each preacher of the ID(can not be changed) of the created group.
    They, in turn, register in this group, indicating the group ID and
    own name. Then send the report in the main window, the warden.\n\n\n

        About the creator (gu.oleg2@gmail.com): \n
        I did not want to mess around very hard with the Google license, so you will not find this app in the play markete.
    </string>
    <string name="show_year_report">show year report</string>

</resources>
