<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_of_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="3">

        <TextView
            android:id="@+id/size_studying_bible_show_report_of_user"
            style="@style/TextSizeNumber.WrapContent"
            android:text="@string/size_studying_bible"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/size_repeated_visits_show_report_of_user"
            style="@style/TextSizeNumber.WrapContent"
            android:text="@string/size_repeated_visits" />

        <TextView
            android:id="@+id/size_hours_show_report_of_user"
            style="@style/TextSizeNumber.WrapContent"
            android:text="@string/size_hours" />

        <TextView
            android:id="@+id/size_videos_of_user_show_report"
            style="@style/TextSizeNumber.WrapContent"
            android:text="@string/size_videos" />

        <TextView
            android:id="@+id/size_publications_of_user_show_report"
            style="@style/TextSizeNumber.WrapContent"
            android:text="@string/size_publications" />

    </GridLayout>

</LinearLayout>