<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.reports.RegisterUserActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/tv_id_warder_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/warder_id" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/tv_your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name" />
    </TableRow>

    <Button
        android:id="@+id/btn_registration_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registration"
        android:text="@string/log_in" />
</LinearLayout>

